# leaf-flow-worker

./: .env.example  .gitignore  pyproject.toml
src/notifications_worker/infra/: settings.py
src/notifications_worker/infra/telegram/: client.py
