[project]
name = "leaf-flow-notifications-worker"
version = "0.1.0"
description = "Celery worker for Leaf Flow notifications (Telegram)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "celery[redis]>=5.4.0",
  "redis>=5.0.0",
  "httpx[socks]>=0.27.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "pydantic-settings>=2.2.1",
  "cloudinary>=1.36.0",
  "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "types-redis>=4.6.0.20240806",
]

[tool.hatch.build.targets.wheel]
packages = ["src/notifications_worker"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict = true
